--- a/web/static/index.html
+++ b/web/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-Time Arbitrage Detector</title>
+    <title>APEX: Arbitrage Profit EXplorer</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
@@ -11,8 +11,8 @@
     <div class="container">
         <header>
             <div class="logo-container">
-                <img src="img/logo.svg" alt="Arbitrage Detector Logo" class="logo">
-                <h1>Real-Time Arbitrage Detector</h1>
+                <img src="img/logo.svg" alt="APEX Logo" class="logo">
+                <h1>APEX: Arbitrage Profit EXplorer</h1>
             </div>
             <div class="connection-status">
                 <span id="status-indicator"></span>
@@ -174,13 +174,13 @@
         </div>
 
         <footer>
-            <p>&copy; 2025 Real-Time Arbitrage Detector | <span id="current-time">00:00:00</span></p>
+            <p>&copy; 2025 APEX: Arbitrage Profit EXplorer | <span id="current-time">00:00:00</span></p>
         </footer>
     </div>
 
     <div id="notification" class="notification hidden">
         <div class="notification-content">
-            <h3>New Arbitrage Opportunity!</h3>
+            <h3>APEX: New Profit Opportunity!</h3>
             <p id="notification-message"></p>
             <button id="notification-close">Close</button>
         </div>
